# actix_server

./: .gitignore  Cargo.toml
migration/: Cargo.toml
migration/src/: lib.rs  m20251126_025741_create_user_table.rs  m20251127_115730_add_auth_fields_to_users.rs
src/: main.rs
src/config/: db.rs
src/dtos/: auth_dto.rs  common_dto.rs  mod.rs  user_dto.rs
src/entity/: user.rs
src/handlers/: auth_handler.rs  mod.rs  user_handler.rs
src/handlers/auth/: login.rs  logout.rs  mod.rs  register.rs
src/middleware/: auth_middleware.rs
src/routes/: auth.rs  mod.rs  user.rs
src/utils/: jwt.rs
