[package]
name = "actix_server"
version = "0.1.0"
edition = "2024"


[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
tokio = { version = "1", features = ["full"] }

async-std = { version = "1", features = ["attributes", "tokio1"] }

# INI KUNCINYA: Harus sqlx-mysql
sea-orm = { version = "1.1", features = [ "sqlx-mysql", "runtime-tokio-native-tls", "macros" ] }