[package]
name = "actix_server"
version = "0.1.0"
edition = "2024"


[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"

async-std = { version = "1", features = ["attributes", "tokio1"] }

# SeaORM
sea-orm = { version = "1.1", features = [ "sqlx-mysql", "runtime-tokio-native-tls", "macros" ] }

# Authentication & Security
jsonwebtoken = "9"
bcrypt = "0.15"
chrono = { version = "0.4", features = ["serde"] }